Added second variant - gutter the same height as the knob

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <div class="container">
     <h2>Shields</h2>
-    <div class="gutter">
-      <div class="knob"></div>
+    <div class="gutter v2-gutter">
+      <div class="knob v2-knob"></div>
     </div>
   </div>
 
